updatePet method implemented